--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                     </div>
                     <div class="about-block__item">
                         <p class="flow-text"> <b>3/3</b> </p>
-                        <span class="">Мы охотимся за экспертизой, чтобы превратить ее в классный продукт, монетизировать, создать
+                        <span class="">Мы охотимся за экспертизой, чтобы превратить ее в классный продукт,
+                            монетизировать, создать
                             узнаваемость твоего бренда и вывести твой блог на космический уровень</span>
                     </div>
 
@@ -144,17 +145,20 @@
                 <div class="row">
                     <div class="col s12 m6 who-item">
                         <h5>1</h5>
-                        <span><b>Проанализируем</b> твою аудиторию, сформируем стратегию, концепцию и формат продвижения</span>
+                        <span><b>Проанализируем</b> твою аудиторию, сформируем стратегию, концепцию и формат
+                            продвижения</span>
                     </div>
                     <div class="col s12 m6 who-item">
                         <h5>2</h5>
-                        <span>Соберем твой опыт и знания, как конструктор, и упакуем в <b> готовый продукт</b> (курсы, видеоуроки, гайды,
+                        <span>Соберем твой опыт и знания, как конструктор, и упакуем в <b> готовый продукт</b> (курсы,
+                            видеоуроки, гайды,
                             подкасты, чек-листы, приложения, вебинары)
                         </span>
                     </div>
                     <div class="col s12 m6 who-item">
                         <h5>3</h5>
-                        <span><b>Бесплатно</b> продюсируем на всех этапах и прорабатываем вместе с тобой каждую деталь</span>
+                        <span><b>Бесплатно</b> продюсируем на всех этапах и прорабатываем вместе с тобой каждую
+                            деталь</span>
                     </div>
                     <div class="col s12 m6 who-item">
                         <h5>4</h5>
@@ -185,7 +189,8 @@
                             <p>— Это не SMM, где ты платишь за продвижение</p>
                             <p>— Это мы вкладываем деньги в твои знания и харизму</p>
                         </div>
-                        <a href="#modal-contact" data-previous-modal="modal-contact" class="custom-button modal-nav">Я ХОЧУ</a>
+                        <a href="#modal-contact" data-previous-modal="modal-contact" class="custom-button modal-nav">Я
+                            ХОЧУ</a>
 
                     </div>
 
@@ -436,37 +441,36 @@
 
                 <div class=" row">
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv1.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_1.svg" class="icon-image-svg" alt="image">
                         <span>Увеличение аудитории подписчиков</span>
-
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv2.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_2.svg" class="icon-image-svg" alt="image">
                         <span>Фиксированный доход от знаний/умений</span>
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv3.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_3.svg" class="icon-image-svg" alt="image">
                         <span>Расширение клиентской базы </span>
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv4.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_4.svg" class="icon-image-svg" alt="image">
                         <span>Упаковка личного бренда</span>
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv5.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_5.svg" class="icon-image-svg" alt="image">
                         <span>Четкая стратегия продвижения </span>
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv6.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_6.svg" class="icon-image-svg" alt="image">
                         <span>Рекламные кампании блога</span>
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv7.svg" class="icon-image-svg" alt="image">
+                        <img src="assets/images/icon/advant_7.svg" class="icon-image-svg" alt="image">
                         <span>Оформление твоего опыта в продукт </span>
                     </div>
                     <div class="col s6 l3 advantages-item">
-                        <img src="assets/images/icon/adv8.svg" class="icon-image-svg" alt="image">
-                        <span>Аналитика и статистика работ</span>
+                        <img src="assets/images/icon/advant_8.svg" class="icon-image-svg" alt="image">
+                        <span>Оформление твоего опыта в продукт </span>
                     </div>
                 </div>
 
@@ -554,36 +558,45 @@
                 <div class="steps-block__item">
                     <p class="flow-text"><b>1/5</b></p>
                     <p class="flow-text"><b>Ты оставляешь заявку на продюсирование </b></p>
-                    <span>Мы определяем твою профессиональную ценность, изучаем активность, потенциал аккаунта и аудитории. Если ты
-                        нам подходишь, связываемся – и приглашаем для формирования стратегии, анализа вместе с командой Webmart
+                    <span>Мы определяем твою профессиональную ценность, изучаем активность, потенциал аккаунта и
+                        аудитории. Если ты
+                        нам подходишь, связываемся – и приглашаем для формирования стратегии, анализа вместе с командой
+                        Webmart
                         Production.
                         Заключаем договор</span>
                 </div>
                 <div class="steps-block__item">
                     <p class="flow-text"> <b>2/5</b></p>
                     <p class="flow-text"> <b>Упаковка твоих знаний в продукт, который можно продать</b> </p>
-                    <span>Ты ничего не платишь! Мы профессионально настраиваем рекламные кампании, являемся сертифицированными
-                        партнёрами Google и Яндекс! Делаем так, чтобы о тебе узнали люди, которые захотят купить твои навыки и умения</span>
+                    <span>Ты ничего не платишь! Мы профессионально настраиваем рекламные кампании, являемся
+                        сертифицированными
+                        партнёрами Google и Яндекс! Делаем так, чтобы о тебе узнали люди, которые захотят купить твои
+                        навыки и умения</span>
                 </div>
                 <div class="steps-block__item">
                     <p class="flow-text"> <b>3/5</b> </p>
                     <p class="flow-text"> <b>Продвижение тебя и продукта за наш рекламный бюджет</b> </p>
-                    <span>Для блогера-миллионника это может быть разработка игры-приложения с его лицом. Для коуча – вебинар по
-                        борьбе с синдромом самозванца. Для beaty-блогера – чек-лист опасных составляющих в косметике. Создаем несколько
+                    <span>Для блогера-миллионника это может быть разработка игры-приложения с его лицом. Для коуча –
+                        вебинар по
+                        борьбе с синдромом самозванца. Для beaty-блогера – чек-лист опасных составляющих в косметике.
+                        Создаем несколько
                         вариантов и делаем тестовый запуск</span>
                 </div>
                 <div class="steps-block__item">
                     <p class="flow-text"> <b>4/5</b> </p>
                     <p class="flow-text"> <b>Прорабатываем маркетинговую стратегию</b> </p>
-                    <span class="">Помогаем с организацией фото- и видеосъемок, сценариев, образов, интервью и прочих коллабораций. На
-                        основании полученных материалов создаем контент-план, который поможет увеличить число подписчиков и повысить
+                    <span class="">Помогаем с организацией фото- и видеосъемок, сценариев, образов, интервью и прочих
+                        коллабораций. На
+                        основании полученных материалов создаем контент-план, который поможет увеличить число
+                        подписчиков и повысить
                         узнаваемость бренда</span>
 
                 </div>
                 <div class="steps-block__item">
                     <p class="flow-text"> <b>5/5</b> </p>
                     <p class="flow-text"> <b>Получаем первый доход </b> </p>
-                    <span class="">Делим его в процентном соотношении, указанном в договоре. Работаем на долгосрочную перспективу и
+                    <span class="">Делим его в процентном соотношении, указанном в договоре. Работаем на долгосрочную
+                        перспективу и
                         постоянно адаптируемся под тренды соцсетей</span>
                 </div>
             </div>
@@ -593,7 +606,8 @@
             <div class="arrow"></div>
         </div>
         <div class="container">
-            <a href="#modal-contact" data-previous-modal="modal-contact" class="custom-button modal-nav">Прокачать блог</a>
+            <a href="#modal-contact" data-previous-modal="modal-contact" class="custom-button modal-nav">Прокачать
+                блог</a>
         </div>
 
 
@@ -614,8 +628,10 @@
 
                     <div class="col s12 l4">
                         <p>Используя этот сайт, вы&nbsp;принимаете
-                            <a href="#modal-offer" data-previous-modal="modal-offer" class="modal-nav">пользовательское соглашение</a> и&nbsp;
-                            <a href="#modal-policy" data-previous-modal="modal-policy" class="modal-nav">политику конфиденциальности</a>.
+                            <a href="#modal-offer" data-previous-modal="modal-offer" class="modal-nav">пользовательское
+                                соглашение</a> и&nbsp;
+                            <a href="#modal-policy" data-previous-modal="modal-policy" class="modal-nav">политику
+                                конфиденциальности</a>.
                         </p>
                         <a href="mailto:ad@webmart.by">ad@webmart.by</a>
                     </div>
